package edu.csc207.recruitment.backgroundactions.user;

import edu.csc207.recruitment.backgroundactions.base.BackgroundAction;

/**
 * A parent class for all background actions relevant to user.
 */

public abstract class UserBackgroundAction implements BackgroundAction {


}
